Comments and Javadocs!
git-svn-id: https://subversion.assembla.com/svn/wii_finger_tracking@13 fab751ff-edd5-44c7-826f-13ac260a3a68